[package]
name = "YellowSqaure"
version = "0.1.0"
edition = "2021"
exclude = [ "./.gitignore" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
psx = { git = "https://github.com/ayrtonm/psx-sdk-rs.git" }

[features]
loadable_exe = []
